Fixes truncate issue

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -934,8 +934,13 @@ pre.light-well {
     min-width: 0;
     line-height: 16px;
     
+    @include media-breakpoint-only(sm) {
+      display: flex;
+    }
+
     .flex-wrapper {
       flex: 1;
+      min-width: 0;
     }
 
     p,
